[gd_scene load_steps=6 format=3 uid="uid://dv6uki2c7gspc"]

[ext_resource type="Texture2D" uid="uid://de40h508eascu" path="res://spacetile_1.png" id="1_aetoo"]
[ext_resource type="Script" path="res://tile.gd" id="1_m5qct"]
[ext_resource type="Texture2D" uid="uid://ceep07pyh4rny" path="res://spacetile_2.png" id="2_6jrn7"]
[ext_resource type="Texture2D" uid="uid://bwr5it4nk073n" path="res://spacetile_3.png" id="3_8pas3"]

[sub_resource type="SpriteFrames" id="SpriteFrames_evxni"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_aetoo")
}],
"loop": true,
"name": &"default1",
"speed": 0.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_6jrn7")
}],
"loop": true,
"name": &"default2",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_8pas3")
}],
"loop": true,
"name": &"default3",
"speed": 5.0
}]

[node name="Tile" type="AnimatedSprite2D"]
scale = Vector2(0.95, 0.95)
sprite_frames = SubResource("SpriteFrames_evxni")
animation = &"default1"
script = ExtResource("1_m5qct")

[node name="Button" type="Button" parent="."]
offset_left = -39.0
offset_top = -39.0
offset_right = 39.0
offset_bottom = 39.0
flat = true

[connection signal="mouse_entered" from="Button" to="." method="_on_button_mouse_entered"]
[connection signal="mouse_exited" from="Button" to="." method="_on_button_mouse_exited"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
